Become full async, implement execution
- Use aleph for async HTTP
- Use docker to execute commands
- Expose standard REST API